# Minecraft_CPP

./: CMakeLists.txt
assets/: blockatlas.dat.zst  blockdata.dat.zst  blockmodels.dat.zst  blockstates.dat.zst  blocktextures.dat.zst  itemdata.dat.zst
assets/blockmodels.dat.zst!/: blockstates.dat.zst
assets/shaders/: basic.frag  basic.vert  boundary.frag  boundary.vert  quad.vert  text.frag  text.vert
src/glad/: glad.cpp  glad.h
src/net/lily/minecpp/: Minecraft.cpp  Minecraft.hpp
src/net/lily/minecpp/entity/: Entity.cpp  Entity.hpp
src/net/lily/minecpp/entity/player/: EntityPlayer.cpp  EntityPlayer.hpp
src/net/lily/minecpp/menu/: Gui.cpp  Gui.hpp
src/net/lily/minecpp/menu/impl/: GuiDownloadTerrain.hpp  GuiIngame.hpp  GuiMainMenu.hpp
src/net/lily/minecpp/net/: Connection.cpp  Connection.hpp  NetClient.cpp  NetClient.hpp  NetHandler.hpp  PacketStream.cpp  PacketStream.hpp
src/net/lily/minecpp/net/packets/: ClientBoundPacket.hpp  Packet.hpp  ServerBoundPacket.hpp
src/net/lily/minecpp/render/: BlockAtlas.hpp  Camera.hpp  FontRenderer.cpp  FontRenderer.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp
src/net/lily/minecpp/util/: AABB.hpp  Attributes.hpp  ChatHistory.cpp  ChatHistory.hpp  FrustumPlanes.hpp  GameSettings.cpp  GameSettings.hpp  Inputs.hpp  Math.hpp  Rotation.hpp  Timer.hpp  Zstd.hpp
src/net/lily/minecpp/world/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp  WorldClient.cpp  WorldClient.hpp  WorldSettings.hpp  WorldType.cpp  WorldType.hpp
src/net/lily/minecpp/world/block/: Block.cpp  Block.hpp  BlockRegistry.hpp
(+39 files in other folders)
